--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
 body{
     font-size: 18px;
-    background-color: #333;
+    background-color: #333 !important;
     height: 100%;
     margin: 0px;
 }
@@ -614,4 +614,19 @@ input[type="checkbox"][id^="cb"] {
       border-radius: 5px;
       margin-top: 10px;
       
+}
+.ad-btn{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.lc-date{
+  border-bottom: 1px solid;
+  margin-top: 10px;
+}
+.lc-suatchieu{
+  display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 80%;
 }
