--- a/css/style.css
+++ b/css/style.css
@@ -706,7 +706,7 @@ input[type="checkbox"][id^="cb"] {
 }
 .input-dathang{
   padding: 50px 90px;
-  background: rgb(255 255 255 / 49%);
+  background: beige;
   margin-top: 50px;
   border-radius: 20px;
 }
@@ -714,7 +714,7 @@ input[type="checkbox"][id^="cb"] {
   width: 150px;
   font-size: 16px;
     font-weight: 700;
-    color: #eee;
+    color: #333;
 }
 .combo-dathang{
   display: flex;
@@ -726,3 +726,23 @@ input[type="checkbox"][id^="cb"] {
 .dathang-left{
   padding: 0px 200px;
 }
+.modal{
+  display: none; /* mặc định được ẩn đi */
+  position: fixed; /* vị trí cố định */
+  z-index: 1; /* Ưu tiên hiển thị trên cùng */
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%; 
+  overflow: auto;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+ 
+}
+.close1{
+  border: none;
+  background: none;
+}
+
+ 
