--- a/css/style.css
+++ b/css/style.css
@@ -848,3 +848,14 @@ input[type="checkbox"][id^="cb"] {
   display: flex;
   justify-content: flex-end;
 }
+.sl-active{
+  width: 80px;
+    margin-left: 10px;
+    border: 1px solid #0000006b;
+    width: 80px;
+}
+.span-error{
+  font-size: 12px;
+  color: #f93838;
+  font-style: italic;
+}
